Add a class with red font to use when counter is negative

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -20,6 +20,10 @@ form {
   font-family: 'Bungee', sans-serif;
 }
 
+.exceed {
+  color: #FF0000;
+}
+
 button {
   color: #FFFFFF;
   font-family: 'Bungee', sans-serif;
