--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,9 +1,9 @@
 form {
-  font-size: 1em;
-  font-weight: bold;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  font-size: 1em;
+  font-weight: bold;
 }
 
 #tweet-text {
@@ -25,15 +25,20 @@ form {
 }
 
 button {
+  justify-content: space-between;
   color: #FFFFFF;
   font-family: 'Bungee', sans-serif;
   background-color: #4056A1;
   padding: 0.2em 0.5em 0.2em 0.5em;
-  justify-content: space-between;
 }
 
 form > div {
   display: flex;
   justify-content: space-between;
   padding: 1.1em 0 1.1em 0;
+}
+
+button:hover {
+  background-color: #5e6c9c;
+  cursor: pointer;
 }
