--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,4 +6,5 @@
   height: 400px;
   background-color: #e3f988;
   background-image: url("https://www.transparenttextures.com/patterns/p4.png");
+  margin-top: 120px;
 }
