--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,9 @@ nav {
   background-color: #4056A1;
   padding: 0.8em 1.5em 0.8em 1.5em;
   z-index: 1;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .nav-write-tweet {
