--- a/public/styles/old-tweet.css
+++ b/public/styles/old-tweet.css
@@ -2,7 +2,7 @@
   display: flex;
 }
 
-#old-tweets {
+#tweets-container {
   padding: 2em 0 2em 0;
 }
 
@@ -10,6 +10,7 @@
   flex-direction: column;
   border: solid 4px;
   padding: 0.8em 0.5em 0.8em 0.5em;
+  margin: 2em 0 2em 0;
 }
 
 .single-tweet:hover {
