Add border radius

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -30,6 +30,7 @@ button {
   font-family: 'Bungee', sans-serif;
   background-color: #4056A1;
   padding: 0.2em 0.5em 0.2em 0.5em;
+  border-radius: 8px;
 }
 
 button:hover {
