--- a/public/styles/old-tweet.css
+++ b/public/styles/old-tweet.css
@@ -11,6 +11,7 @@
   border: solid 4px;
   padding: 0.8em 0.5em 0.8em 0.5em;
   margin: 2em 0 2em 0;
+  border-radius: 20px;
 }
 
 .single-tweet:hover {
