--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,9 @@
+#alert-msg {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #FF0000;
+}
+
 form {
   display: flex;
   flex-direction: column;
