Change colors to meet a contrast ratio of at least 4.5:1 for accessibility

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,7 +1,7 @@
 #alert-msg {
   font-size: 1.2em;
   font-weight: bold;
-  color: #FF0000;
+  color: #DB0000;
 }
 
 form {
@@ -27,7 +27,7 @@ form {
 }
 
 .exceed {
-  color: #FF0000;
+  color: #DB0000;
 }
 
 button {
