--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -27,4 +27,14 @@ nav {
 .angle-double {
   color: #ffff00;
   font-size: 0.8em;
+  animation-name: floating;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes floating {
+  from { transform: translate(0,  0px); }
+  65%  { transform: translate(0, 5px); }
+  to   { transform: translate(0, -0px); }    
 }
