--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,3 +8,16 @@
   background-image: url("https://www.transparenttextures.com/patterns/p4.png");
   margin-top: 120px;
 }
+
+@media screen and (max-width: 370px) {
+  nav {
+    font-size: 0.85rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #profile {
+    min-width: 35%;
+    margin: 240px 70px 200px 50px;
+  }
+}
