--- a/public/styles/old-tweet.css
+++ b/public/styles/old-tweet.css
@@ -3,7 +3,7 @@
 }
 
 #tweets-container {
-  padding: 2em 0 2em 0;
+  padding: 0;
 }
 
 .single-tweet {
@@ -66,6 +66,10 @@ footer {
   gap: 15px;
   font-size: 0.8em;
   color: #4056A1;
+}
+
+.icon {
+  font-size: 1.2rem;
 }
 
 .icon:hover {
