Use Sass variables, nesting, and mixins to updates CSS files

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,6 +6,7 @@
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -13,41 +14,38 @@ html {
 /*
  * Global layout stuff
  */
-
 body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 16px;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-
- nav > span {
-  font-family: 'Bungee', sans-serif;
+nav > span {
+  font-family: "Bungee", sans-serif;
   font-size: 1.8em;
- }
+}
 
- main {
-   width: 90%;
-   margin: auto;
- }
+main {
+  width: 90%;
+  margin: auto;
+}
 
- @media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   body {
     font-size: 24px;
-  } 
- }
-
- @media screen and (min-width: 1024px) {
+  }
+}
+@media screen and (min-width: 1024px) {
   #tweet-new-old {
-     display: flex;
-   }
+    display: flex;
+  }
 
-   main {
+  main {
     min-width: 42%;
     margin: 120px 50px 0 50px;
   }
- }
+}
