--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -12,20 +12,17 @@ nav {
   width: 100%;
   box-shadow: 0 2px rgba(39, 33, 33, 0.3);
 }
-
-.nav-write-tweet {
+nav div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 1.2em;
 }
-
-.nav-write-tweet > p {
+nav div p {
   margin-bottom: 0;
 }
-
-.angle-double {
+nav div i {
   color: #ffff00;
   font-size: 0.8em;
   animation-name: floating;
