Make adjustments in preparation for project submission

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -37,8 +37,14 @@ nav div i {
   animation-timing-function: ease-in-out;
 }
 
-/*@keyframes floating {
-  from { transform: translate(0,  0px); }
-  65%  { transform: translate(0, 5px); }
-  to   { transform: translate(0, -0px); }    
-}*/
+@keyframes floating {
+  from {
+    transform: translate(0, 0px);
+  }
+  65% {
+    transform: translate(0, 5px);
+  }
+  to {
+    transform: translate(0, 0px);
+  }
+}
