--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -43,8 +43,8 @@ nav {
   }
 }
 
-/*@keyframes floating {
+@keyframes floating {
   from { transform: translate(0,  0px); }
   65%  { transform: translate(0, 5px); }
   to   { transform: translate(0, -0px); }    
-}*/
+}
